--- a/publication/23-cmflow-cvpr/index.html
+++ b/publication/23-cmflow-cvpr/index.html
@@ -316,7 +316,7 @@ rel='stylesheet' type='text/css'>
         <h2>Pipeline</h2>
         <hr>
         <section id="teaser">
-            <a href="model_arch.png">
+            <a href="pipeline_cvpr.png">
                 <img class="centered" width="100%" src="pipeline_cvpr.png">
             </a>
             <p class="caption">
