--- a/publication/23-cmflow-cvpr/index.html
+++ b/publication/23-cmflow-cvpr/index.html
@@ -292,7 +292,7 @@ rel='stylesheet' type='text/css'>
             </div>
             <div class="conference-row">
                 <div class="col-1 text-center">
-                    <a href="https://cvpr2023.thecvf.com/">CVPR 2023</a>
+                    <a href="">CVPR 2023</a>
                 </div>
             </div>
         </div>
