--- a/publication/24-radarocc-neurips/index.html
+++ b/publication/24-radarocc-neurips/index.html
@@ -107,7 +107,7 @@
               </span>
               <!-- Demo Link. -->
                <span class="link-block">
-                <a href="https://github.com/Toytiny/RadarOcc" class="external-link button is-normal is-rounded is-dark" target="_blank">
+                <a href="https://www.youtube.com/watch?v=sa4gejcWMvk" class="external-link button is-normal is-rounded is-dark" target="_blank">
                   <span class="icon">
                     <i class="fab fa-youtube"></i>
                   </span>
