--- a/publication/24-radarocc-neurips/index.html
+++ b/publication/24-radarocc-neurips/index.html
@@ -31,7 +31,7 @@
   <meta property="og:title" content="RadarOcc: Robust 3D Occupancy Prediction with 4D Imaging Radar" />
   <meta property="og:description" content="by Fangqiang Ding*, Xiangyu Wen*, Yunzhou Zhu, Yiming Li and Chris Xiaoxuan Lu" />
   <meta property="og:url" content="https://toytiny.github.io/publication/24-radarocc-neurips/index.html" />
-  <meta property="og:image" content="https://toytiny.github.io/publication/24-radarocc-neurips/preview.gif" />
+  <meta property="og:image" content="" />
   <meta property="og:image:secure" content="https://toytiny.github.io/publication/24-radarocc-neurips/static/images/preview.gif" />
   <meta property="og:video" content="" />
   <meta property="og:video:secure" content="" />
