--- a/publication/24-radarocc-neurips/index.html
+++ b/publication/24-radarocc-neurips/index.html
@@ -68,10 +68,10 @@
           </div>
           <br>
           <div class="is-size-5 publication-authors">
-            <sup>1</sup> <a href="https://www.inria.fr/"><img style="height:50px; padding-right: 15px;" src="./static/images/uoe.png"> </a>
-            <sup>2</sup> <a href="https://univ-cotedazur.eu/"><img style="height:50px; padding-right: 15px;" src="./static/images/gtech.png"> </a>
-            <sup>3</sup> <a href="https://www.mpi-inf.mpg.de"><img style="height:50px; padding-right: 15px;" src="./static/images/nyu.png"> </a>
-            <sup>4</sup> <a href="https://www.mpi-inf.mpg.de"><img style="height:50px; padding-right: 15px;" src="./static/images/ucl.png"> </a>
+            <sup>1</sup> <a href="https://www.ed.ac.uk//"><img style="height:50px; padding-right: 15px;" src="./static/images/uoe.png"> </a>
+            <sup>2</sup> <a href="https://www.gatech.edu//"><img style="height:50px; padding-right: 15px;" src="./static/images/gtech.png"> </a>
+            <sup>3</sup> <a href="https://www.nyu.edu/"><img style="height:50px; padding-right: 15px;" src="./static/images/nyu.png"> </a>
+            <sup>4</sup> <a href="https://www.ucl.ac.uk/"><img style="height:50px; padding-right: 15px;" src="./static/images/ucl.png"> </a>
           </div>
           <br>
           <div>
