--- a/publication/23-cmflow-cvpr/index.html
+++ b/publication/23-cmflow-cvpr/index.html
@@ -287,7 +287,7 @@ rel='stylesheet' type='text/css'>
                 </div>
             </div>
             <div class="affil-row">
-                <div class="col-2 text-center"><a href="https://maps-lab.github.io/"><p><sup>1</sup>University of Edinburgh</p></a></div>
+                <div class="col-2 text-center"><a href="https://www.ed.ac.uk/"><p><sup>1</sup>University of Edinburgh</p></a></div>
                 <div class="col-2 text-center"><a href="https://www.tudelft.nl/en/3me/about/departments/cognitive-robotics-cor/people/intelligent-vehicles"><p><sup>2</sup>Delft University of Technology</p></a></div>
             </div>
             <div class="conference-row">
